--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -13,11 +13,11 @@ font-family: 'Numans', sans-serif;
 }
 
 .card{
-height: 400px;
-width: 400px;
-margin-top: 60px;
-margin-left: 50px;
-margin-bottom: auto;
+height: 70vh;
+width: 30vw;
+padding: 1%;
+margin: 110px 10px 10px 440px;
+text-align: center;
 background-color: rgba(0,0,0,0.5) !important;
 color: white;
 }
@@ -27,3 +27,9 @@ color: white;
 text-align: center;
 }
 
+.brand {
+    font-size: 25px;
+    margin-left: 50px;
+    margin-top: 24px;
+    position: absolute;
+}
