--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
 * {
-  border-radius: 0px !important;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .jumbotron {
-  border-radius: 0px !important;
-  background-color: #092b40;
-  color: #fff;
-  font-family: 'Bowlby One', cursive;
+  border-radius: none !important;
+  padding: 5px;
+  border: 1px solid black;
+  background-color: white;
+  margin-left: 70px;
+  color: black;
+  display: inline-block;
+}
+
+.formInfo {
+  margin-left: 30px;
+  margin-top: 30px;
+  display: inline-block;
+}
+
+.profile {
+  text-align: center;
 }
 
 .no-border {
@@ -24,11 +37,33 @@
   border-bottom: 1.5px solid #007bff;
 }
 
+img {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+}
+
+.btn .btn-info {
+  text-decoration: none;
+}
+
 @media only screen and (max-width: 768px) {
   img {
-      max-height: 100px;
+      max-height: 150px;
+
   }
-  .username {
-      text-align: left;
+  .profile {
+      /* margin-left: 50px; */
+      text-align: center;
+  }
+
+  .formInfo {
+    margin-left: 50px;
+  }
+
+  .jumbotron {
+
+    margin: 0px;
+    margin-bottom: 5px;
   }
 }
