--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,5 @@
 .bg{
-background-image: url('bg.jpg');
+background-image: url('bg2.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 position: fixed;
@@ -9,22 +9,35 @@ font-family: 'Numans', sans-serif;
 }
 
 .social {
-    margin-left: 40px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+
 }
 
 .card{
-height: 70vh;
-width: 30vw;
+height: 400px;
+width: 350px;
 padding: 1%;
-margin: 110px 10px 10px 440px;
+margin: 110px 10px 10px 740px;
 text-align: center;
 background-color: rgba(0,0,0,0.5) !important;
 color: white;
 }
 
-.card-header h3{
+.card-header {
 color: white;
 text-align: center;
+font-size: 20px;
+margin-bottom: 30px;
+}
+
+.card-body {
+    margin-bottom: 10px;
+}
+
+.card-text {
+    font-size: 10px;
+    margin-top: 10px;
 }
 
 .brand {
@@ -32,4 +45,27 @@ text-align: center;
     margin-left: 50px;
     margin-top: 24px;
     position: absolute;
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    .card {
+        height: 350px;
+        width: 250px;
+        margin: 100px 10px 10px 20px;
+    }
+
+    .card-header {
+        font-size: 16px;
+    }
+
+    .card-text {
+        font-size: 10px;
+    }
+
+    .social {
+        margin: 0px;
+        margin-bottom: 10px;
+        }
 }
