--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -35,10 +35,10 @@ margin-bottom: 30px;
     margin-bottom: 10px;
 }
 
-.card-text {
-    font-size: 10px;
-    margin-top: 10px;
+.card-footer {
+    margin-top: 200px;
 }
+
 
 .brand {
     font-size: 25px;
@@ -60,8 +60,9 @@ margin-bottom: 30px;
         font-size: 16px;
     }
 
-    .card-text {
+    .card-footer {
         font-size: 10px;
+        margin-top: 0px;
     }
 
     .social {
