--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -35,8 +35,9 @@ margin-bottom: 30px;
     margin-bottom: 10px;
 }
 
-.card-footer {
-    margin-top: 200px;
+.card-footer{
+    margin-top: 180px;
+    font-size: 12px;
 }
 
 
@@ -58,6 +59,7 @@ margin-bottom: 30px;
 
     .card-header {
         font-size: 16px;
+        margin-top: 10px;
     }
 
     .card-footer {
