--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -60,6 +60,7 @@ margin-bottom: 30px;
     .card-header {
         font-size: 16px;
         margin-top: 10px;
+        margin-bottom: 15px;
     }
 
     .card-footer {
@@ -71,4 +72,8 @@ margin-bottom: 30px;
         margin: 0px;
         margin-bottom: 10px;
         }
+    a {
+        font-size: 10px;
+        margin-top: 0px;
+    }
 }
