--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 .jumbotron {
@@ -10,6 +11,7 @@
   margin-left: 25px;
   color: black;
   display: inline-block;
+  background-color: beige;
 }
 
 .formInfo {
@@ -45,6 +47,14 @@ img {
 
 .btn .btn-info {
   text-decoration: none;
+}
+
+.btn-delete {
+  background-color: #de3f24;
+}
+
+.btn-update {
+  background-color: #a7bfe2;
 }
 
 .formInfo {
