--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,3 +1,12 @@
+.faq{
+    background-image: url('bg4.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100%;
+    min-width: 100%;
+  
+}
+
 .faqHeader {
     font-size: 27px;
     margin: 20px;
