--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@
   margin-left: 25px;
   color: black;
   display: inline-block;
-  background-color: beige;
+  background-color: #f8f8f8;
 }
 
 .formInfo {
