--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -15,7 +15,7 @@ font-family: 'Numans', sans-serif;
 }
 
 .card{
-height: 500px;
+height: 510px;
 width: 450px;
 padding: 1%;
 margin: 150px 10px 10px 1100px;
@@ -48,18 +48,95 @@ margin-bottom: 30px;
     position: absolute;
 }
 
+a {
+    color: white;
+}
+
+a:hover {
+    color: lemonchiffon;
+}
+
+
+
+@media only screen and (max-width: 1024px) {
+
+    .card {
+        height: 500px;
+        width: 450px;
+        margin: 200px 10px 10px 450px;
+    }
+
+    .card-header {
+        font-size: 24px;
+        margin-top: 20px;
+        margin-bottom: 15px;
+    }
+
+    .card-footer {
+        font-size: 18px;
+        margin-top: 0px;
+    }
+
+    .social {
+        margin: 0px;
+        margin-bottom: 10px;
+        }
+    a {
+        font-size: 16px;
+        margin-top: 0px;
+    }
+
+    .btn {
+        margin-left: 35px;
+        margin-bottom: 15px;
+    }
+}
 
 @media only screen and (max-width: 768px) {
 
     .card {
-        height: 350px;
-        width: 250px;
-        margin: 100px 10px 10px 20px;
+        height: 400px;
+        width: 300px;
+        margin: 150px 10px 10px 350px;
     }
 
     .card-header {
         font-size: 16px;
-        margin-top: 10px;
+        margin-top: 20px;
+        margin-bottom: 15px;
+    }
+
+    .card-footer {
+        font-size: 12px;
+        margin-top: 0px;
+    }
+
+    .social {
+        margin: 0px;
+        margin-bottom: 10px;
+        }
+    a {
+        font-size: 10px;
+        margin-top: 0px;
+    }
+
+    .btn {
+        margin-left: 25px;
+    }
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    .card {
+        height: 390px;
+        width: 250px;
+        margin: 105px 10px 10px 20px;
+    }
+
+    .card-header {
+        font-size: 16px;
+        margin-top: 20px;
         margin-bottom: 15px;
     }
 
