--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,6 +65,10 @@ img {
   margin-left: 150px;
 }
 
+.faqMain {
+  color: black;
+}
+
 @media only screen and (max-width: 768px) {
   img {
       max-height: 150px;
