--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,6 +26,12 @@
 
 .profile {
   text-align: center;
+  margin-top: 30px;
+  margin-left: 40px;
+  border: 1px solid black;
+  border-radius: 40px;
+  padding: 30px;
+
 }
 
 .no-border {
@@ -63,11 +69,17 @@ img {
 
 .formInfo {
   margin-left: 150px;
+  margin-top: 100px;
 }
 
 .faqMain {
   color: black;
 }
+
+.boardTitle {
+  margin-left: 30px;
+}
+
 
 @media only screen and (max-width: 768px) {
   img {
